[gd_scene load_steps=30 format=3 uid="uid://cn4jmr45pkota"]

[ext_resource type="Script" path="res://BaseGame/LifeStock/lfme.gd" id="1_urotc"]
[ext_resource type="PackedScene" uid="uid://dkx2r2u6ximir" path="res://BaseGame/LifeStock/CubeChan.glb" id="2_pdel4"]
[ext_resource type="Animation" uid="uid://c183ouipfbtkd" path="res://BaseGame/LifeStock/CubeChanAnim/hi.res" id="3_87ieh"]
[ext_resource type="Animation" uid="uid://dcr8qh5rqc723" path="res://BaseGame/LifeStock/CubeChanAnim/idl.res" id="4_kgo5v"]
[ext_resource type="Animation" uid="uid://om78asr6mkaj" path="res://BaseGame/LifeStock/CubeChanAnim/screet.res" id="5_wbnqo"]
[ext_resource type="Animation" uid="uid://dvld15ee6fd0t" path="res://BaseGame/LifeStock/CubeChanAnim/walk_backward.res" id="6_wbnqo"]
[ext_resource type="Animation" uid="uid://bqpbx5fxidpy3" path="res://BaseGame/LifeStock/CubeChanAnim/walk_forward.res" id="7_jp8ix"]
[ext_resource type="Script" path="res://BaseGame/LifeStock/cube_chan_anim_tree.gd" id="7_kgo5v"]
[ext_resource type="AudioStream" uid="uid://cyocswoqj1xes" path="res://BaseGame/Sounds/walk.ogg" id="8_ri7jj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wuaqc"]
radius = 0.476975

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rimof"]
_data = {
"hi": ExtResource("3_87ieh"),
"idl": ExtResource("4_kgo5v"),
"screet": ExtResource("5_wbnqo"),
"walk_backward": ExtResource("6_wbnqo"),
"walk_forward": ExtResource("7_jp8ix")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kgo5v"]
animation = &"CubeChanAnims/idl"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wbnqo"]
animation = &"CubeChanAnims/screet"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nxspv"]
animation = &"CubeChanAnims/walk_backward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ib23e"]
animation = &"CubeChanAnims/walk_forward"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_slx7g"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8a2oq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qlupj"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vf0ly"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u8gdp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j68cm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_42pc2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6y271"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aadpw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kywta"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_idy8t"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ub3nr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vsbl0"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_fqpkj"]
states/CubeChanAnims_idl/node = SubResource("AnimationNodeAnimation_kgo5v")
states/CubeChanAnims_idl/position = Vector2(337, 113)
states/CubeChanAnims_screet/node = SubResource("AnimationNodeAnimation_wbnqo")
states/CubeChanAnims_screet/position = Vector2(827, 113)
states/CubeChanAnims_walk_backward/node = SubResource("AnimationNodeAnimation_nxspv")
states/CubeChanAnims_walk_backward/position = Vector2(595, 187)
states/CubeChanAnims_walk_forward/node = SubResource("AnimationNodeAnimation_ib23e")
states/CubeChanAnims_walk_forward/position = Vector2(595, 36)
states/End/position = Vector2(992, 113)
states/Start/position = Vector2(204, 113)
transitions = ["CubeChanAnims_idl", "CubeChanAnims_screet", SubResource("AnimationNodeStateMachineTransition_slx7g"), "CubeChanAnims_screet", "CubeChanAnims_idl", SubResource("AnimationNodeStateMachineTransition_8a2oq"), "Start", "CubeChanAnims_idl", SubResource("AnimationNodeStateMachineTransition_qlupj"), "CubeChanAnims_idl", "CubeChanAnims_walk_forward", SubResource("AnimationNodeStateMachineTransition_vf0ly"), "CubeChanAnims_walk_forward", "CubeChanAnims_idl", SubResource("AnimationNodeStateMachineTransition_u8gdp"), "CubeChanAnims_walk_forward", "CubeChanAnims_screet", SubResource("AnimationNodeStateMachineTransition_j68cm"), "CubeChanAnims_screet", "CubeChanAnims_walk_forward", SubResource("AnimationNodeStateMachineTransition_42pc2"), "CubeChanAnims_idl", "CubeChanAnims_walk_backward", SubResource("AnimationNodeStateMachineTransition_6y271"), "CubeChanAnims_walk_backward", "CubeChanAnims_idl", SubResource("AnimationNodeStateMachineTransition_aadpw"), "CubeChanAnims_walk_backward", "CubeChanAnims_screet", SubResource("AnimationNodeStateMachineTransition_kywta"), "CubeChanAnims_screet", "CubeChanAnims_walk_backward", SubResource("AnimationNodeStateMachineTransition_idy8t"), "CubeChanAnims_walk_forward", "CubeChanAnims_walk_backward", SubResource("AnimationNodeStateMachineTransition_ub3nr"), "CubeChanAnims_walk_backward", "CubeChanAnims_walk_forward", SubResource("AnimationNodeStateMachineTransition_vsbl0")]
graph_offset = Vector2(101, -21)

[node name="LifeMe" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00639, 0)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_urotc")

[node name="body" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_wuaqc")

[node name="CubeChan" parent="." instance=ExtResource("2_pdel4")]
transform = Transform3D(9.86008e-08, 0, -0.751908, 0, 0.751908, 0, 0.751908, 0, 9.86008e-08, 0, -0.958554, 0)

[node name="cubeChanAnim" type="AnimationPlayer" parent="CubeChan"]
libraries = {
"CubeChanAnims": SubResource("AnimationLibrary_rimof")
}
autoplay = "CubeChanAnims/idl"

[node name="cubeChanAnimTree" type="AnimationTree" parent="CubeChan/cubeChanAnim"]
root_node = NodePath("../..")
tree_root = SubResource("AnimationNodeStateMachine_fqpkj")
anim_player = NodePath("..")
script = ExtResource("7_kgo5v")

[node name="SpotLight3D" type="SpotLight3D" parent="CubeChan"]
transform = Transform3D(-5.81339e-08, 0, -1.32995, 0, 1.32995, 0, 1.32995, 0, -5.81339e-08, 0.340998, 1.45708, 0.332452)

[node name="SpotLight3D2" type="SpotLight3D" parent="CubeChan"]
transform = Transform3D(-5.81339e-08, 0, -1.32995, 0, 1.32995, 0, 1.32995, 0, -5.81339e-08, 0.340998, 1.45708, -0.191941)

[node name="SpotLight3D3" type="SpotLight3D" parent="CubeChan"]
transform = Transform3D(-5.8134e-08, 0, 1.32995, 0, 1.32995, 0, -1.32995, 0, -5.8134e-08, -0.504098, 2.32181, -0.191941)
spot_range = 3.0

[node name="SpotLight3D4" type="SpotLight3D" parent="CubeChan"]
transform = Transform3D(-5.8134e-08, 0, 1.32995, 0, 1.32995, 0, -1.32995, 0, -5.8134e-08, -0.504098, 2.32181, 0.332452)
spot_range = 3.0

[node name="walk" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_ri7jj")
pitch_scale = 0.8

[node name="run" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_ri7jj")
pitch_scale = 1.5

[connection signal="animation_finished" from="CubeChan/cubeChanAnim" to="." method="_on_cube_chan_anim_animation_finished"]
